k8s/frontend_deployment.yml
# configure for deployment for front end
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: todo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-deployment
  template:
    metadata:
      labels:
        app: frontend-deployment
    spec:
      containers:
        - name: frontned
          image: sumeruc/todo-frontend:v1
          ports:
            - containerPort: 80
