k8s/mongodb_deployment.yml
# mongoDB deployment + PVC (storage)

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-deployment
  template:
    metadata:
      labels:
        app: mongo-deployement
    spec:
      containers:
        - name: mongo
          image: mongo:6
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-vol
              mountPath: /data/db
      volumes:
        - name: mongo-vol
          PersistentVolumeClaim:
            claimName: mongo-pvc
