k8s/backend_service.yml
# configure backend service file

apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: todo-app
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
