k8s/ingress.yml
# ingress the main entrance (production traffic routing)

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: todo-app
  annotations:
    nginx.ingress.kubernetes.io/revision-target: /
spec:
  rules:
    - host: todoapp.local
      http:
        paths:
          - path: /api # /api :- backend routing
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 5000

          - path: / # /:- frontend routing
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
